--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-26  Mark Rowe  <mrowe@apple.com>
+
+        Update expected results.
+
+        * platform/mac/fast/overflow/clip-rects-fixed-ancestor-expected.txt:
+
 2007-10-25  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
