--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-26  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * JavaScriptCore.pri:
+        * kjs/ExecState.cpp:
+
 2007-10-26  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
