--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-26  Mark Rowe  <mrowe@apple.com>
+
+        Debug build fix.
+
+        * bindings/js/kjs_proxy.cpp:
+        (WebCore::KJSProxy::~KJSProxy):
+
 2007-10-26  Maciej Stachowiak  <mjs@apple.com>
 
         No review, build fix.
