2007-10-26  Mark Rowe  <mrowe@apple.com>
        Build fix.  Add missing #include of Platform.h.

        * Api/qwebhistoryinterface.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27109 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-26  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.  Add missing #include of Platform.h.
+
+        * Api/qwebhistoryinterface.cpp:
+
 2007-10-25  Holger Freyther  <zecke@selfish.org>
 
         Reviewed by Simon Hausmann <hausmann@kde.org>.
