--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-26  Mark Rowe  <mrowe@apple.com>
+
+        Windows build fix.
+
+        * kjs/collector.cpp:
+        (KJS::Collector::collect):
+
 2007-10-26  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Maciej.
