Suggested by Darin Adler.
        Use computedHash(), which is safer than just directly accessing _hash.

        * kjs/lookup.cpp:
        (KJS::Lookup::findEntry):
        (KJS::Lookup::find):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27132 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,15 @@
 2007-10-26  Geoffrey Garen  <ggaren@apple.com>
 
+        Suggested by Darin Adler.
+        
+        Use computedHash(), which is safer than just directly accessing _hash.
+
+        * kjs/lookup.cpp:
+        (KJS::Lookup::findEntry):
+        (KJS::Lookup::find):
+
+2007-10-26  Geoffrey Garen  <ggaren@apple.com>
+
         Build fix: svn add SymbolTable.h
 
         * kjs/SymbolTable.h: Added.
