Windows build fix.
        * kjs/SymbolTable.h: Add header gaurd.
        * kjs/nodes.h: #include "SymbolTable.h"



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27134 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-26  Sam Weinig  <sam@webkit.org>
+
+        Windows build fix.
+
+        * kjs/SymbolTable.h: Add header gaurd.
+        * kjs/nodes.h: #include "SymbolTable.h"
+
 2007-10-26  Geoffrey Garen  <ggaren@apple.com>
 
         Suggested by Anders Carlsson.
