--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-26  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Adam.
+
+        - Made JSStringCreateWithBSTR capable of handling null BSTRs.
+
+        * API/JSStringRefCOM.cpp:
+        (JSStringCreateWithBSTR):
+
 2007-10-26  Sam Weinig  <sam@webkit.org>
 
         Windows build fix.
