--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-27  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/function.h:
+
 2007-10-26  Kevin McCullough  <kmccullough@apple.com>
 
        Rubber stamp by Adam. 
