--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -2,6 +2,18 @@
 
         Reviewed by Darin.
 
+        http://bugs.webkit.org/show_bug.cgi?id=15555
+        XMLHttpRequest does not support charset "x-user-defined", which can
+        facilitate loading of binary data
+
+        * http/tests/xmlhttprequest/binary-x-user-defined-expected.txt: Added.
+        * http/tests/xmlhttprequest/binary-x-user-defined.html: Added.
+        * http/tests/xmlhttprequest/resources/256.bin: Added.
+
+2007-10-27  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
         Test by Christopher Rogers <christorogers@gmail.com>.
 
         http://bugs.webkit.org/show_bug.cgi?id=15467
