Add some more failing tests to the Windows Skipped file
        Reviewed by NOBODY.

        * platform/win/Skipped:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27157 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-27  Adam Roben  <aroben@apple.com>
+
+        Add some more failing tests to the Windows Skipped file
+
+        Reviewed by NOBODY.
+
+        * platform/win/Skipped:
+
 2007-10-27  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
