2007-10-28  Lars Lindner  <lars.lindner@gmail.com>
        Reviewed by Alp.

        http://bugs.webkit.org/show_bug.cgi?id=15466
        [gtk] widget does not take focus on mouse click

        Grab widget focus in mouse press callback.

        * Api/webkitgtkpage.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27168 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-28  Lars Lindner  <lars.lindner@gmail.com>
+
+        Reviewed by Alp.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15466
+        [gtk] widget does not take focus on mouse click
+
+        Grab widget focus in mouse press callback.
+
+        * Api/webkitgtkpage.cpp:
+
 2007-10-25  Alp Toker  <alp@atoker.com>
 
         Reviewed by Brady.
